--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,30 +20,30 @@ monwin.app.jwtExpirationMs=86400000
 
 # ******************************* Paramettre docker ********************** 
 
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-# spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
-# spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
-# spring.datasource.username=${POSTGRES_USER}
-# spring.datasource.password=${POSTGRES_PASSWORD}
-# spring.jpa.show-sql=true
-# spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# spring.datasource.initialization-mode=always
-# spring.datasource.initialize=true
-# spring.datasource.continue-on-error=true
+spring.datasource.initialization-mode=always
+spring.datasource.initialize=true
+spring.datasource.continue-on-error=true
 
 
 #******************** parame bd mysql **********************
-server.port=8081
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/person
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
-#log
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
-#spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.thymeleaf.templateResolverOrder=1
+# server.port=8081
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=jdbc:mysql://localhost:3306/person
+# spring.datasource.username=root
+# spring.datasource.password=
+# spring.jpa.hibernate.ddl-auto=update
+# #log
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.type=TRACE
+# #spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+# spring.thymeleaf.templateResolverOrder=1
 
