ajout url default

--- a/.env
+++ b/.env
@@ -9,3 +9,10 @@ SPRING_JPA_HIBERNATE_DDL_AUTO=update
 # DB manager
 PGADMIN_DEFAULT_EMAIL=koumwinnie@gmail.com
 PGADMIN_DEFAULT_PASSWORD=admin
+
+kubectl create secret tls backend-consulting-tls-secret \
+  --cert=path/to/certificate.pem \
+  --key=path/to/privatekey.pem \
+  --namespace=4al2-groupe-10
+
+kubectl --kubeconfig kubeconfig.yaml create secret tls backend-consulting-tls-secret \ --cert=certificate.crt \ --key=privateKey.key \ --namespace=4al2-groupe-10
