--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -15,6 +16,8 @@
 	<description>Application ESGI Backend consulting</description>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.projectKey>backend-consulting</sonar.projectKey>
+		<sonar.organization>4al2-groupe-10</sonar.organization>
 	</properties>
 	<dependencies>
 		<dependency>
