--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ monwin.app.jwtExpirationMs=86400000
 # spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.PostgreSQLDialect
 # spring.jpa.hibernate.ddl-auto=update
 # spring.datasource.url=jdbc:postgresql://localhost:5432/consulting
-# spring.datasource.username=winniemonel
-# spring.datasource.password=secret
+# spring.datasource.username=postgres
+# spring.datasource.password=root
 # spring.jpa.show-sql=true
 # spring.datasource.driver-class-name=org.postgresql.Driver
 
