--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,3 +40,22 @@ jobs:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         if: steps.build.outcome == 'success'
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build Docker image
+        run: |
+          docker build -t winniemonel/backend:${{ github.sha }} .
+        env:
+          DOCKER_USERNAME: ${{ env.DOCKER_USERNAME }}
+      - name: Push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: winniemonel/backend:${{ github.sha }}
+        env:
+          DOCKER_USERNAME: ${{ env.DOCKER_USERNAME }}
+        if: success()
