--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 		<java.version>17</java.version>
 		<sonar.projectKey>backend-consulting</sonar.projectKey>
 		<sonar.organization>4al2-groupe-10</sonar.organization>
+		<sonar.organization>backend-consulting</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -44,11 +46,6 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<!-- <dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
-		</dependency> -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
