--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,17 +39,13 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build Docker image
         run: |
-          docker build -t $DOCKER_USERNAME/backend:${{ github.sha }} .
-        env:
-          DOCKER_USERNAME: ${{ env.DOCKER_USERNAME }}
+          docker build -t winniemonel/backend:${{ github.sha }} .
       - name: Push Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: $DOCKER_USERNAME/backend:${{ github.sha }}
-        env:
-          DOCKER_USERNAME: ${{ env.DOCKER_USERNAME }}
+          tags: winniemonel/backend:${{ github.sha }}
         if: success()
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
