--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI/CD pipeline
 
 on:
   push:
@@ -19,10 +19,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Set up Java
-        uses: actions/setup-java@v1
+      - name: Set up JDK 17 
+        uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          distribution: 'temurin'
+          java-version: '17'
+          overwrite-settings: false
       - name: Build with Maven
         run: mvn package -B
         continue-on-error: true
@@ -60,7 +62,7 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       - name: Build and analyze
-        run: mvn -B verify sonar:sonar -Dsonar.projectKey=WinnieParton_backend-consulting -Dsonar.organization=backend-consulting -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=WinnieParton_backend-consulting
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
