--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,13 @@ on:
 
 env:
   DOCKER_USERNAME: winniemonel
+  POSTGRES_PORT: 5432
+  POSTGRES_HOST: postgresqldb
+  POSTGRES_USER: winniemonel
+  POSTGRES_PASSWORD: secret
+  POSTGRES_DB: consulting
+  POSTGRES_DB_CHARSET: utf8
+  SPRING_JPA_HIBERNATE_DDL_AUTO: update
 
 jobs:
   build:
@@ -19,15 +26,16 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_USER: ${{ variables.POSTGRES_USER }}
-          POSTGRES_PASSWORD: ${{ variables.POSTGRES_PASSWORD }}
-          POSTGRES_DB: ${{ variables.POSTGRES_DB }}
-          POSTGRES_HOST: ${{ variables.POSTGRES_HOST }}
-          SPRING_JPA_HIBERNATE_DDL_AUTO: ${{ variables.SPRING_JPA_HIBERNATE_DDL_AUTO }}
+          POSTGRES_USER: ${{ env.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
+          POSTGRES_DB: ${{ env.POSTGRES_DB }}
+          POSTGRES_HOST: ${{ env.POSTGRES_HOST }}
+          SPRING_JPA_HIBERNATE_DDL_AUTO: ${{ env.SPRING_JPA_HIBERNATE_DDL_AUTO }}
         ports:
         - 5432:5432
         # needed because the postgres container does not provide a healthcheck
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -53,13 +61,13 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build Docker image
         run: |
-          docker build -t winniemonel/backend:${{ github.sha }} .
+          docker build -t ${{ env.DOCKER_USERNAME }}/backend:${{ github.sha }} .
       - name: Push Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: winniemonel/backend:${{ github.sha }}
+          tags: ${{ env.DOCKER_USERNAME }}/backend:${{ github.sha }}
         if: success()
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
