--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,9 @@
 	<properties>
 		<java.version>17</java.version>
 		<sonar.projectKey>backend-consulting</sonar.projectKey>
-		<sonar.organization>4al2-groupe-10</sonar.organization>
+		<!-- <sonar.organization>4al2-groupe-10</sonar.organization> -->
+		<sonar.organization>backend-consulting</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
